--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -1,6 +1,6 @@
 # This is a workflow to build/launch or rebuild given sceptre CF stack
 
-name: Build Stack
+name: Deploy Tesseract
 
 # Controls when the workflow will run
 on:
@@ -44,12 +44,12 @@ jobs:
           role-duration-seconds: 3600
           aws-region: ${{  github.event.inputs.region }}
 
-      # Testing user
-      - name: sceptre launch
-        id: build_task
+      # deploy
+      - name: deploy via sceptre
+        id: deploy_tesseract
         run: |
           aws sts get-caller-identity
-          ls
+          cd infrastructure
           sh vars/var_generator.sh
 
       # Notify on slack
