--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -11,22 +11,17 @@ on:
         description: which region should Tesseract product be deployed to?
         required: true
         default: us-west-2
-      deploy_role:
-        description: Role ARN to assume while deploying Tesseract
+      environment:
+        description: Provide Git Environment to get deploy credentials from
         required: true
-      access_id:
-        description: AWS_ACCESS_KEY_ID value to assume deploy_role
-        required: true
-      secret_key:
-        description: AWS_SECRET_ACCESS_KEY value to assume deploy_role
-        required: true
+        default: tesseract
 jobs:
   # This workflow contains a single job called "build-stack" to deploy Tesseract
   build-stack:
     name: Deploy Tesseract
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    environment: ${{  github.event.inputs.environment }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -38,9 +33,9 @@ jobs:
       - name: Configuring Deploy user
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{  github.event.inputs.access_id }}
-          aws-secret-access-key: ${{  github.event.inputs.secret_key }}
-          role-to-assume: ${{  github.event.inputs.deploy_role }}
+          aws-access-key-id: ${{ secrets.AWS_DEPLOY_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_DEPLOY_SECRET_KEY }}
+          role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE }}
           role-duration-seconds: 3600
           aws-region: ${{  github.event.inputs.region }}
 
