--- a/infrastructure/vars/deployment_vars.yaml
+++ b/infrastructure/vars/deployment_vars.yaml
@@ -1,3 +1,4 @@
-account_id: 391614362198
-team_name=aftermarketbi
-bigdata_portfolio=port-a44l3tv77jvis
+account_id: 338555309768
+team_name: domainfind
+bigdata_portfolio: port-cwgaqjnsazwxk
+region: us-west-2
