--- a/tesseract_lambda/Makefile
+++ b/tesseract_lambda/Makefile
@@ -1,5 +1,5 @@
 #ARTIFACT_NAME = $(shell basename "$$PWD")
-ARTIFACT_NAME=tesseract_athena_get_resolver
+ARTIFACT_NAME=tesseract
 ARTIFACT_VERSION=0.1.0
 
 .PHONY: build
@@ -9,6 +9,7 @@ build:
 	poetry export --without-hashes --format requirements.txt > requirements.txt
 	poetry run pip install -I --target build -r requirements.txt
 	poetry run pip install -I --target build --no-deps dist/${ARTIFACT_NAME}-${ARTIFACT_VERSION}-py3-none-any.whl
+	ls dist/
 	cd build && zip ../dist/${ARTIFACT_NAME}-${ARTIFACT_VERSION}.zip . -r9 -x "*.pyc"
 	cd src && zip -g ../dist/${ARTIFACT_NAME}-${ARTIFACT_VERSION}.zip index.py
 
