--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -69,12 +69,12 @@ jobs:
           cd tesseract_lambda
           make clean
           make build
-          aws s3 cp dist/*.zip s3://$bucket_name/code
+          aws s3 cp dist/*.zip s3://$bucket_name/code/
           echo "**** Deploying tesseract resolver"
           cd ../tesseract_athena_get_resolver
           make clean
           make build
-          aws s3 cp dist/*.zip s3://$bucket_name/code
+          aws s3 cp dist/*.zip s3://$bucket_name/code/
 
 
 
