adding code deploy artifacts

--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -75,6 +75,11 @@ jobs:
           make clean
           make build
           aws s3 cp dist/*.zip s3://$bucket_name/code/
+          echo "**** Deploying tesseract dynamo worker"
+          cd ../dynamo_worker
+          make clean
+          make build
+          aws s3 cp dist/*.zip s3://$bucket_name/code/
 
 
 
