--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -76,7 +76,7 @@ jobs:
           make build
           aws s3 cp dist/*.zip s3://$bucket_name/code/
           echo "**** Deploying tesseract dynamo worker"
-          cd ../dynamo_worker
+          cd ../tesseract_dynamo_worker
           make clean
           make build
           aws s3 cp dist/*.zip s3://$bucket_name/code/
