--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -82,8 +82,8 @@ jobs:
           aws s3 cp dist/*.zip s3://$bucket_name/code/
           echo "**** Deploying tesflow worker assets"
           cd ../tesseract_lambda/src
-          aws s3 cp tesseract/* s3://$bucket_name/airflow_environment/dags/tesseract/
-          aws s3 cp ../tesflow_artifacts/* s3://$bucket_name/airflow_environment/dags/
+          aws s3 cp tesseract/* s3://$bucket_name/airflow_environment/dags/tesseract/ --recursive
+          aws s3 cp ../tesflow_artifacts/* s3://$bucket_name/airflow_environment/dags/ --recursive
 
       # deploy worker code
       - name: deploy worker
