--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -69,23 +69,23 @@ jobs:
           echo "**** Deploying tesseract lambda"
           cd tesseract_lambda
           make clean
-          make build
-          aws s3 cp dist/*.zip s3://$bucket_name/code/
+          # make build
+          # aws s3 cp dist/*.zip s3://$bucket_name/code/
           echo "**** Deploying tesseract resolver"
           cd ../tesseract_athena_get_resolver
           make clean
-          make build
-          aws s3 cp dist/*.zip s3://$bucket_name/code/
+          # make build
+          # aws s3 cp dist/*.zip s3://$bucket_name/code/
           echo "**** Deploying tesseract dynamo worker"
           cd ../tesseract_dynamo_worker
           make clean
-          make build
-          aws s3 cp dist/*.zip s3://$bucket_name/code/
+          # make build
+          # aws s3 cp dist/*.zip s3://$bucket_name/code/
           echo "**** Deploying tesflow worker assets"
           cd ../tesseract_lambda/src
-          aws s3 cp tesseract/* s3://$bucket_name/airflow_environment/dags/tesseract/ --recursive
+          # aws s3 cp tesseract/* s3://$bucket_name/airflow_environment/dags/tesseract/ --recursive
           cd ../../tesflow_artifacts
-          aws s3 cp . s3://$bucket_name/airflow_environment/dags/ --recursive
+          # aws s3 cp . s3://$bucket_name/airflow_environment/dags/ --recursive
 
       # deploy worker code
       - name: deploy worker
@@ -99,7 +99,7 @@ jobs:
           # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tes-athena-get-resolver.yaml
           # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tes-lambda.yaml
           echo "**** Updating connections"
-          python scripts/connection_creator.py
+          python scripts/connection_creator.py ${{ secrets.AWS_DEPLOY_ACCESS_KEY }} ${{ secrets.AWS_DEPLOY_SECRET_KEY }} ${{ secrets.AWS_DEPLOY_ROLE }}
 
       # Notify on slack
       # Always checkout - https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions
