--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -51,7 +51,7 @@ jobs:
           echo "Deploying Tesflow Module"
           # sceptre --var-file=vars/deployment_vars.yaml launch -y tesflow/tesflow-policy.yaml
           # sceptre --var-file=vars/deployment_vars.yaml launch -y tesflow/tesflow-role.yaml
-          # sceptre --var-file=vars/deployment_vars.yaml launch -y tesflow/tesflow.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y tesflow/tesflow.yaml
           echo "Deploying notification channel"
           # sceptre --var-file=vars/deployment_vars.yaml launch -y reporting/notification-sns.yaml
 
