--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -83,7 +83,7 @@ jobs:
           # aws s3 cp dist/*.zip s3://$bucket_name/code/
           echo "**** Deploying tesflow worker assets"
           cd ../tesseract_lambda/src
-          # aws s3 cp tesseract/* s3://$bucket_name/airflow_environment/dags/tesseract/ --recursive
+          # aws s3 cp tesseract/wrappers/* s3://$bucket_name/airflow_environment/dags/tesseract/wrappers/ --recursive
           cd ../../tesflow_artifacts
           # aws s3 cp . s3://$bucket_name/airflow_environment/dags/ --recursive
 
@@ -92,6 +92,9 @@ jobs:
         id: deploy_worker
         run: |
           aws sts get-caller-identity
+          environment_val=`aws ssm get-parameter --name /AdminParams/Team/Environment --query "Parameter.Value" --output text`
+          team_name_val=`aws ssm get-parameter --name /AdminParams/Team/Name --query "Parameter.Value" --output text`
+          bucket_name="gd-$team_name_val-$environment_val-tesseract"
           cd infrastructure
           # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/lambda-custom-policy.yaml
           # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/lambda-role.yaml
@@ -99,7 +102,7 @@ jobs:
           # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tes-athena-get-resolver.yaml
           # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tes-lambda.yaml
           echo "**** Updating connections"
-          python scripts/connection_creator.py ${{ secrets.AWS_DEPLOY_ACCESS_KEY }} ${{ secrets.AWS_DEPLOY_SECRET_KEY }} ${{ secrets.AWS_DEPLOY_ROLE }}
+          python scripts/connection_creator.py ${{ secrets.AWS_DEPLOY_ACCESS_KEY }} ${{ secrets.AWS_DEPLOY_SECRET_KEY }} ${{ secrets.AWS_DEPLOY_ROLE }} $bucket_name
 
       # Notify on slack
       # Always checkout - https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions
