Added connector module

--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -107,8 +107,7 @@ jobs:
           # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tes-lambda.yaml
           sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tesseract-connector.yaml
           echo "**** Updating connections"
-          python scripts/connection_creator.py ${{ secrets.AWS_DEPLOY_ACCESS_KEY }} ${{ secrets.AWS_DEPLOY_SECRET_KEY }} ${{ secrets.AWS_DEPLOY_ROLE }} $bucket_name
-
+          aws lambda invoke --function-name gd-$team_name_val-$environment_val-tesseract-connector-runner --payload "{ \"role_arn\": \"${{ secrets.AWS_DEPLOY_ROLE }}\", \"deploy_secret_id\": \"${{ secrets.DEPLOY_SECRET_ID }}\" }"
       # Notify on slack
       # Always checkout - https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions
       - name: Get GD version of rtCamp actions
