Added connector module

--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -108,7 +108,9 @@ jobs:
           # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tesseract-connector.yaml
           echo "**** Updating connections"
           echo '{ "role_arn": "${{ secrets.AWS_DEPLOY_ROLE }}", "deploy_secret_id": "${{ secrets.DEPLOY_SECRET_ID }}"}' > payload.json
-          aws lambda invoke --function-name gd-$team_name_val-$environment_val-tesseract-connector-runner --payload payload.json out
+          cat payload.json
+          base64 payload.json > payload_b64.json
+          aws lambda invoke --function-name gd-$team_name_val-$environment_val-tesseract-connector-runner --payload payload_b64.json out
           cat out
 
       # Notify on slack
