--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -49,11 +49,11 @@ jobs:
           echo "Deploying artifacts bucket"
           # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tesseract-s3.yaml
           echo "Deploying Tesflow Module"
-          # sceptre --var-file=vars/deployment_vars.yaml launch -y tesflow/tesflow-policy.yaml
-          # sceptre --var-file=vars/deployment_vars.yaml launch -y tesflow/tesflow-role.yaml
-          # sceptre --var-file=vars/deployment_vars.yaml launch -y tesflow/tesflow.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y tesflow/tesflow-policy.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y tesflow/tesflow-role.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y tesflow/tesflow.yaml
           echo "Deploying notification channel"
-          # sceptre --var-file=vars/deployment_vars.yaml launch -y reporting/notification-sns.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y reporting/notification-sns.yaml
 
       # deploy code artifacts
       - name: deploy code files
@@ -69,27 +69,27 @@ jobs:
           echo "**** Deploying tesseract lambda"
           cd tesseract_lambda
           make clean
-          # make build
-          # aws s3 cp dist/*.zip s3://$bucket_name/code/
+          make build
+          aws s3 cp dist/*.zip s3://$bucket_name/code/
           echo "**** Deploying tesseract resolver"
           cd ../tesseract_athena_get_resolver
           make clean
-          # make build
-          # aws s3 cp dist/*.zip s3://$bucket_name/code/
+          make build
+          aws s3 cp dist/*.zip s3://$bucket_name/code/
           echo "**** Deploying tesseract dynamo worker"
           cd ../tesseract_dynamo_worker
           make clean
-          # make build
-          # aws s3 cp dist/*.zip s3://$bucket_name/code/
+          make build
+          aws s3 cp dist/*.zip s3://$bucket_name/code/
           cd ../tesseract_connector
           make clean
           make build
           aws s3 cp dist/*.zip s3://$bucket_name/code/
           echo "**** Deploying tesflow worker assets"
           cd ../tesseract_lambda/src
-          # aws s3 cp tesseract/wrappers/* s3://$bucket_name/airflow_environment/dags/tesseract/wrappers/ --recursive
+          aws s3 cp tesseract/wrappers/* s3://$bucket_name/airflow_environment/dags/tesseract/wrappers/ --recursive
           cd ../../tesflow_artifacts
-          # aws s3 cp . s3://$bucket_name/airflow_environment/dags/ --recursive
+          aws s3 cp . s3://$bucket_name/airflow_environment/dags/ --recursive
 
       # deploy worker code
       - name: deploy worker
@@ -100,18 +100,18 @@ jobs:
           team_name_val=`aws ssm get-parameter --name /AdminParams/Team/Name --query "Parameter.Value" --output text`
           bucket_name="gd-$team_name_val-$environment_val-tesseract"
           cd infrastructure
-          # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/lambda-custom-policy.yaml
-          # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/lambda-role.yaml
-          # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tesseract-dyn-loader.yaml
-          # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tes-athena-get-resolver.yaml
-          # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tes-lambda.yaml
-          # sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tesseract-connector.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/lambda-custom-policy.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/lambda-role.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tesseract-dyn-loader.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tes-athena-get-resolver.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tes-lambda.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tesseract-connector.yaml
           echo "**** Updating connections"
           export env_val=$environment_val
           export team_name_val=$team_name_val
           export secret_id=${{ secrets.DEPLOY_SECRET_ID }}
           export role=${{ secrets.AWS_DEPLOY_ROLE }}
-          python scripts/init_worker.py
+          # python scripts/init_worker.py
 
       # Notify on slack
       # Always checkout - https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions
