Added init worker

--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -11,7 +11,7 @@ on:
         description: which region should Tesseract product be deployed to?
         required: true
         default: us-west-2
-      environment:
+      deploy_env:
         description: Provide Git Environment to get deploy credentials from
         required: true
         default: tesseract
@@ -21,7 +21,7 @@ jobs:
     name: Deploy Tesseract
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    environment: ${{  github.event.inputs.environment }}
+    environment: ${{  github.event.inputs.deploy_env }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
