added tessync initiator

--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -111,6 +111,7 @@ jobs:
           sceptre --var-file=vars/deployment_vars.yaml launch -y tessync/sync-access-role.yaml
           sceptre --var-file=vars/deployment_vars.yaml launch -y tessync/tesseract-sync-api.yaml
           echo "**** Updating connections"
+          export region_val=${{  github.event.inputs.region }}
           export env_val=$environment_val
           export team_name_val=$team_name_val
           export secret_id=${{ secrets.DEPLOY_SECRET_ID }}
