--- a/.github/workflows/delete_tesseract.yaml
+++ b/.github/workflows/delete_tesseract.yaml
@@ -11,7 +11,7 @@ on:
         description: which region should Tesseract product be deployed to?
         required: true
         default: us-west-2
-      environment:
+      targetEnv:
         description: Provide Git Environment to get deploy credentials from
         required: true
         default: tesseract
@@ -21,7 +21,7 @@ jobs:
     name: Destroy Tesseract
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    environment: ${{  github.event.inputs.environment }}
+    environment: ${{  github.event.inputs.targetEnv }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -46,12 +46,25 @@ jobs:
           aws sts get-caller-identity
           cd infrastructure
           sh vars/var_generator.sh ${{  github.event.inputs.region }}
-          echo "Tearing down Tesflow Module"
+          echo "**** Tearing down Workers"
+          sceptre --var-file=vars/deployment_vars.yaml delete -y worker-artifacts/tesseract-dyn-loader.yaml
+          sceptre --var-file=vars/deployment_vars.yaml delete -y worker-artifacts/tes-athena-get-resolver.yaml
+          sceptre --var-file=vars/deployment_vars.yaml delete -y worker-artifacts/tes-lambda.yaml
+          sceptre --var-file=vars/deployment_vars.yaml delete -y worker-artifacts/tesseract-connector.yaml
+          echo "**** Tearing down Tesflow & Sync"
+          sceptre --var-file=vars/deployment_vars.yaml delete -y tessync/tesseract-sync-api.yaml
           sceptre --var-file=vars/deployment_vars.yaml delete -y tesflow/tesflow.yaml
-          sceptre --var-file=vars/deployment_vars.yaml delete -y tesflow/tesflow-role.yaml
-          sceptre --var-file=vars/deployment_vars.yaml delete -y tesflow/tesflow-policy.yaml
-          echo "Tearing down notification channel"
+          echo "**** Tearing down notification system"
           sceptre --var-file=vars/deployment_vars.yaml delete -y reporting/notification-sns.yaml
+          echo "**** Tearing down iam assets"
+          sceptre --var-file=vars/deployment_vars.yaml delete -y worker-artifacts/lambda-role.yaml
+          sceptre --var-file=vars/deployment_vars.yaml delete -y tessync/sync-access-role.yaml
+          sceptre --var-file=vars/deployment_vars.yaml delete -y tesflow/tesflow-role.yaml
+          sceptre --var-file=vars/deployment_vars.yaml delete -y worker-artifacts/lambda-custom-policy.yaml
+          sceptre --var-file=vars/deployment_vars.yaml delete -y tessync/sync-access-policy.yaml
+          sceptre --var-file=vars/deployment_vars.yaml delete -y tesflow/tesflow-policy.yaml
+          echo "*** Knocking off s3 bucket"
+          sceptre --var-file=vars/deployment_vars.yaml delete -y worker-artifacts/tesseract-s3.yaml
       # Notify on slack
       # Always checkout - https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions
       - name: Get GD version of rtCamp actions
